# EcuRecetas

./: .gitignore  CMakeLists.txt
src/: main.c
src/headers/widgets/: main_menu.h
src/widgets/: main_menu.c
